--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,8 @@ p {
 #service .container,
 #education .container,
 #contact .container,
-#blog .container {
+#blog .container,
+#projects .container {
   width: 100%;
   padding: 0;
   margin: 0;
@@ -154,7 +155,8 @@ p {
   #service .container,
   #education .container,
   #contact .container,
-  #blog .container {
+  #blog .container,
+  #projects .container {
     padding: 0 0 0 15px;
   }
 }
@@ -167,6 +169,7 @@ p {
 
 #service,
 #blog,
+#projects,
 footer {
   text-align: center;
 }
@@ -470,6 +473,97 @@ a:hover, a:active, a:focus {
 }
 
 
+/*---------------------------------------
+    Projects section              
+-----------------------------------------*/
+
+#projects {
+  background: url('../images/projects-bg.jpg') 50% 0 repeat-y fixed;
+  background-size: cover;
+  background-position: center center;
+  color: #ffffff;
+  position: relative;
+  padding: 50px 0px;
+}
+
+#projects .overlay {
+  background: #121212;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  opacity: 0.1;
+}
+
+#projects .fa {
+font-size: 42px;
+margin-top: 32px;
+margin-bottom: 22px;
+}
+
+#projects a {
+font-weight: 300;
+}
+
+
+#projects .section-btn {
+/* background: #ffffff;
+margin: 12px 0px 12px 15px;
+border: 3px solid #232B2B;
+border-radius: 20px;
+color: #232B2B;
+transition: all 0.4s ease-in-out;
+text-transform: uppercase;
+font-size: 10px; */
+background: rgba(255,255,255,.9);
+border-radius: 5px;
+box-shadow: 2px 2px 5px #161616;
+text-transform: none;
+padding: 12px;
+min-height: 250px;
+/* margin-left: 15px; */
+}
+
+#projects .section-btn:hover {
+background: rgb(255,255,255);
+cursor:pointer;
+}
+
+#projects h1 {
+  color: #161616;
+}
+#projects h3 {
+/*width: 80%; */
+  text-align: center;
+  color: #6F527F;
+  padding: 1rem;
+  margin: 0 auto;
+  font-weight: 400;
+  font-size: 24px;
+}
+
+#projects p {
+color: #161616;
+}
+
+@media only screen and (min-width: 315px) {
+#projects .section-btn {
+  margin-left: 15px;
+  margin-top:0;
+}
+}
+@media only screen and (min-width: 768px) {
+#projects .section-btn {
+  margin-top: 15px;
+  margin-left: 0;
+}
+}
+
+@media only screen and (min-width: 1024px) {
+#projects .section-btn {
+  margin:0;
+}
+} 
 
 /*---------------------------------------
     Experience section              
