--- a/css/styles.css
+++ b/css/styles.css
@@ -591,13 +591,16 @@ color: #161616;
   opacity: 0.1;
 }
 
-#sideProjects .fab {
-  font-size: 28px;
+#sideProjects .fab, #sideProjects .far {
+  font-size: 24px;
   margin-right: 10px;
 }
 
 #sideProjects a {
-font-weight: 400;
+  font-weight: 400;
+  margin-left: 3rem;
+  text-align: left;
+  display: block;
 }
 
 
@@ -707,6 +710,11 @@ color: #161616;
 #education small {
   color: #F1E2D7;
   font-weight: bold;
+}
+.certificate {
+  display: inline-block;
+  fill: gold;
+  width: 15px;
 }
 
 
