--- a/css/styles.css
+++ b/css/styles.css
@@ -422,7 +422,7 @@ a:hover, a:active, a:focus {
 -----------------------------------------*/
 
 #whatIDo .whatIDo-img {
-    background: url('../images/whatIDo-img.jpg') no-repeat;
+    background: url('../images/whatido-img.jpg') no-repeat;
 }
 
 #whatIDo .whatIDo-thumb,
@@ -875,10 +875,6 @@ color: #161616;
   padding-right: 10px;
 }
 
-.contact-thumb .color-white {
-  color: #F1E2D7;
-}
-
 
 /*---------------------------------------
    Footer section              
@@ -886,6 +882,7 @@ color: #161616;
 
 footer {
     padding: 50px 0px;
+    background: #161616;
 }
 
 
@@ -930,7 +927,10 @@ footer {
     transform: scale(1.1);
 }
 
-
+.contact-thumb p a img, .contact-info p img {
+  height:24px;
+  width:auto;
+}
 
 /*---------------------------------------
    Mobile Responsive         
